--- a/models/source.yml
+++ b/models/source.yml
@@ -11,4 +11,15 @@ sources:
       - name: RAWCUSTOMERS1
       - name: PAYMENTS1
 
+
+  - name: rawsource1
+    database: DBT  
+    schema: RAWDATA  
+    tables:
+      - name: RAWCUSTOMERS
+      - name: RAWORDERITEMS
+      - name: RAWORDERS
+      - name: RAWPAYMENTS
+      - name: RAWPRODUCTS
+         identifier:PROD
       
